# qwik

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: publish.yml  sonarqube.yml  test.yml
docs/: arguments.md
qwik/: __init__.py  __main__.py  cli.py  config.py
qwik/commands/: add.py  doctor.py  edit.py  enable_disable.py  exporter.py  importer.py  init_shell.py  list.py  pick.py  remove.py  rename.py  run.py  search.py  show.py  tag.py
qwik/core/: conflicts.py  models.py  search.py  store.py  substitute.py
qwik/shells/: base.py  bash.py  cmd.py  fish.py  pwsh.py  zsh.py
qwik/ui/: picker.py  prompts.py  tables.py  theme.py
tests/: test_add.py  test_callback_coverage.py  test_cli.py  test_cli_callback.py  test_conflicts.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_doctor.py  test_edit.py  test_entrypoint.py  test_exporter.py  test_final_coverage.py  test_final_push.py  test_importer.py  test_init_shell.py  test_last_gaps.py  test_main.py  test_models.py  test_remove.py  test_rename.py  test_run.py  test_shells.py  test_store.py  test_sub_and_shells.py  test_substitute.py  test_tag.py  test_ui_and_models.py  test_unit_gaps.py  test_zsh.py
