[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwik"
version = "0.1.2"
description = "A Friendly CLI Alias Manager"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "qwik contributors"}
]
keywords = ["cli", "alias", "shell", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "rapidfuzz>=3.0.0",
    "pydantic>=2.0.0",
    "tomlkit>=0.12.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
qwik = "qwik.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "syrupy>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["qwik"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=qwik --cov-report=term-missing --cov-report=xml --cov-fail-under=85"

[tool.coverage.run]
source = ["qwik"]
omit = ["*/tests/*"]
relative_files = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
